# Startup-Builder

./: .env  README.md  list_models.py  project_manifest.json  pyproject.toml  pytest_output.txt  verify_model.py
api/: main.py
controller/: agents.py  orchestrator.py
frontend/: index.html
tests/: test_agents.py  test_orchestrator.py
